# MLProject2025

./: LICENSE  Makefile  README.md  pyproject.toml
Project/: __init__.py  dataset.py  features.py  plots.py
Project/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 1.LinearRegression.ipynb
